Fix header background misalignment

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -112,7 +112,6 @@ html {
   }
 }
 
-
 /**
  * 1. Set sticky footer
  * 2. Prevents IE10-11 flex container bug
@@ -130,6 +129,7 @@ body {
   /* stylelint-disable-next-line declaration-block-no-duplicate-properties, value-no-vendor-prefix */
   min-height: -webkit-fill-available; /* 3 */
   margin: 0;
+  overflow-x: hidden;
 
   color: my.palette('black');
 
